--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "untitled1",
-    "short_name": "untitled1",
+    "name": HealthConnect,
+    "short_name": "HealthConnect",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
